# LapShop

./: alembic.ini  pyproject.toml  requirements.txt
app/: config.py  main.py
app/controller/: authentication.py  brand.py  cart.py  cart_product.py  invoice.py  order.py  product.py  users.py
app/model/: __init__.py  brand.py  cart.py  cart_product.py  invoice.py  mixins.py  order.py  person.py  product.py  user.py
app/repository/: base_repo.py  cart.py  cart_product.py  users.py
app/schema/: brand.py  cart.py  cart_product.py  invoice.py  order.py  product.py  schema.py
app/service/: auth_service.py  invoice.py  users.py
migrations/: env.py
migrations/versions/: 931e97095f3b_initial_tables.py  9b12af01f82f_initial_tables.py  a27f7642684c_add_tables.py  ae06b9c34279_add_tables.py  aece6c44a9ae_initial_tables.py  d38dac204657_add_tables.py  eb3cd3f712a1_add_tables.py  f28cd5d167f1_initial_tables.py
