[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["nxh <hungbboiz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.22.0"
fastapi = "^0.98.0"
SQLAlchemy = ">=1.4.17,<=1.4.41"
sqlmodel = "^0.0.8"
asyncpg = "^0.27.0"
psycopg2 = "^2.8.6"
pyscopg2 = "^66.0.2"
alembic = "^1.11.1"
passlib = "^1.7.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start="app.main:start"
